[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/MenuTitle.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/Kenney Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/station.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[node name="MenuTitle" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
custom_constants/separation = 64
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 94.0
margin_right = 694.0
margin_bottom = 648.0
rect_min_size = Vector2( 600, 0 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Body" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 758.0
margin_right = 1058.0
margin_bottom = 648.0

[node name="Title" type="Label" parent="HBoxContainer/Body"]
margin_right = 300.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 1 )
text = "Deep
Space
Grind"

[node name="SubTitle" type="Label" parent="HBoxContainer/Body"]
margin_top = 253.0
margin_right = 300.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
text = "Credits Rule Everything Around Me"
autowrap = true

[node name="BtnMap" type="Button" parent="HBoxContainer/Body"]
margin_top = 344.0
margin_right = 300.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 3 )
text = "Star Map Test"

[node name="BtnHangar" type="Button" parent="HBoxContainer/Body"]
margin_top = 372.0
margin_right = 300.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 3 )
text = "Ship Customization Test"

[node name="BtnRange" type="Button" parent="HBoxContainer/Body"]
margin_top = 400.0
margin_right = 300.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 3 )
text = "Firing Range"

[node name="BtnMission" type="Button" parent="HBoxContainer/Body"]
margin_top = 428.0
margin_right = 300.0
margin_bottom = 452.0
custom_fonts/font = SubResource( 3 )
text = "Mission Test"

[node name="BtnQuit" type="Button" parent="HBoxContainer/Body"]
margin_top = 456.0
margin_right = 300.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 3 )
text = "Quit to Desktop"

[connection signal="pressed" from="HBoxContainer/Body/BtnMap" to="." method="_on_BtnMap_pressed"]
[connection signal="pressed" from="HBoxContainer/Body/BtnHangar" to="." method="_on_BtnHangar_pressed"]
[connection signal="pressed" from="HBoxContainer/Body/BtnRange" to="." method="_on_BtnRange_pressed"]
[connection signal="pressed" from="HBoxContainer/Body/BtnMission" to="." method="_on_BtnMission_pressed"]
[connection signal="pressed" from="HBoxContainer/Body/BtnQuit" to="." method="_on_BtnQuit_pressed"]
